[gd_scene load_steps=12 format=3 uid="uid://dln2exny627e6"]

[ext_resource type="Script" path="res://Scripts/fps_controller.gd" id="1_aprkx"]
[ext_resource type="Texture2D" uid="uid://drahh08hfj0gh" path="res://Sprites/Crosshair.png" id="2_eek03"]
[ext_resource type="PackedScene" uid="uid://nl3llk4mf5rd" path="res://Prefabs/cube_item.tscn" id="3_30jxi"]
[ext_resource type="Script" path="res://Scripts/sky_controller.gd" id="4_v3422"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4ocde"]
albedo_color = Color(0.948478, 0.714018, 0.902237, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_efgoq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_d8k0m"]

[sub_resource type="SphereShape3D" id="SphereShape3D_bugtv"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_kiscf"]
sky_top_color = Color(0.558891, 0.399861, 0.553169, 1)
ground_bottom_color = Color(0.854642, 0.485523, 0.463136, 1)

[sub_resource type="Sky" id="Sky_2pspg"]
sky_material = SubResource("ProceduralSkyMaterial_kiscf")

[sub_resource type="Environment" id="Environment_ifvg3"]
background_mode = 2
sky = SubResource("Sky_2pspg")
tonemap_mode = 2

[node name="World" type="Node3D"]

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.171783, 0, -2.73453)
material_override = SubResource("StandardMaterial3D_4ocde")
use_collision = true
collision_layer = 3
size = Vector3(14.0079, 1, 15.8443)

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.62449, 2.45023)
script = ExtResource("1_aprkx")

[node name="Head" type="Node3D" parent="Player"]

[node name="Camera3D" type="Camera3D" parent="Player/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.686435, -0.685831)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
mesh = SubResource("CapsuleMesh_efgoq")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("CapsuleShape3D_d8k0m")

[node name="UI" type="Control" parent="Player"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="InventoryPanel" type="Panel" parent="Player/UI"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="InventoryGrid" type="GridContainer" parent="Player/UI/InventoryPanel"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
columns = 4

[node name="Crosshair" type="Control" parent="Player/UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 536.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = -284.0
grow_horizontal = 2
grow_vertical = 2

[node name="cross" type="TextureRect" parent="Player/UI/Crosshair"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_eek03")
metadata/_edit_use_anchors_ = true

[node name="ItemDetector" type="Area3D" parent="Player"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player/ItemDetector"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
shape = SubResource("SphereShape3D_bugtv")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.783997, 0.620765, 0, -0.620765, 0.783997, 0, 104.493, -26.1537)

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.65687, -9.00265)

[node name="CubeItem" parent="Node3D" instance=ExtResource("3_30jxi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.119532, 0.0498724)
collision_layer = 2
collision_mask = 2

[node name="Node3D2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.66395, 3.65687, -9.00265)

[node name="CubeItem" parent="Node3D2" instance=ExtResource("3_30jxi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.119532, 0.0498724)
collision_layer = 2
collision_mask = 2

[node name="Node3D3" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.95445, 3.65687, -9.00265)

[node name="CubeItem" parent="Node3D3" instance=ExtResource("3_30jxi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.119532, 0.0498724)
collision_layer = 2
collision_mask = 2

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ifvg3")

[node name="SkyController" type="Node3D" parent="WorldEnvironment"]
script = ExtResource("4_v3422")
